--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,8 @@
 [build]
-  command = "echo 'Netlify build starting...'"
+  # CRITICAL: Tell Netlify where the functions are located
   functions = "netlify/functions"
   
 [functions]
+  # CRITICAL FIX: Use esbuild, which is more reliable for external fetch calls
   node_bundler = "esbuild"
   node_version = "18"
-
-# This block ensures the build environment sets the key correctly
-[build.environment]
-  NODE_VERSION = "18"
