--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,4 @@
-[build]
-  # CRITICAL: Tell Netlify where the functions are located
-  functions = "netlify/functions"
-  
 [functions]
-  # CRITICAL FIX: Use esbuild, which is more reliable for external fetch calls
+  directory = "netlify/functions"
   node_bundler = "esbuild"
   node_version = "18"
