--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
-[functions]
-  directory = "netlify/functions"
-  node_bundler = "esbuild"
-  node_version = "18"
+[build]
+  # Tell Netlify where the functions are located (using the default, zero-config setting)
+  functions = "netlify/functions"
+
+# Optionally specify a Node version for stability
+[build.environment]
+  NODE_VERSION = "18"
