--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
 [build]
-  # Tell Netlify where the functions are located (this is the only requirement)
-  functions = "netlify/functions"
+  publish = "." 
+
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+
+# NEW: Basic Authentication Configuration
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Basic-Auth = "bongothedog:81621070318162107033"
