--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "gemini-chat-proxy-function",
+  "name": "gemini-chat-app",
   "version": "1.0.0",
+  "description": "A simple Gemini chat proxy using Netlify functions.",
   "dependencies": {
     "node-fetch": "^2.6.7"
   }
