--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "netlify-functions-dependencies",
+  "name": "gemini-cloud-run-proxy",
   "version": "1.0.0",
+  "description": "Gemini proxy deployed on Google Cloud Run.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "node-fetch": "^2.6.7"
   }
 }
